app/film-database/components/movie/_fdDetails.scss
@use '/app/base/sass/util/functions' as f;
@use '/app/film-database/scss/fdMixins' as m;

.fdDetails {
  position: relative;
  z-index: 3;
  flex: 0 1 auto;
  display: flex;
  align-items: center;
  height: inherit;
  padding: var(--fd-padding-generic) 0 calc(var(--fd-padding-generic) / 2) calc(var(--fd-padding-generic) / 1.5);
  &[data-modal='false'] {
    #fdDetails {
      &--exit,
      &--genres,
      &--providers {
        display: none;
      }
    }
  }
  &[data-modal='true'] {
    #fdDetails--nav {
      display: none;
    }
  }

  &__article--exit {
    position: absolute;
    z-index: 13;
    top: calc(var(--fd-padding-generic) / 1.5);
    right: calc(var(--fd-padding-generic) / 1.5);
    & svg {
      width: 1.6em;
      aspect-ratio: 1/1;
    }
  }

  &__article {
    display: flex;
    flex-direction: column;
    & footer a {
      display: block;
      width: calc(2.25rem * 4); // 4X Header font-size
    }
    & header {
      display: flex;
      align-items: center;
      gap: var(--fd-gap);
      & h2 {
        max-width: 28ch;
        white-space: nowrap;
        overflow: clip;
        text-overflow: ellipsis;
        @include m.fdFontXXL;
        text-transform: uppercase;
        text-shadow: var(--fd-font-shadow);
      }
      & button svg {
        width: 1.6em;
        aspect-ratio: 1/1;
      }
    }
    & p {
      display: -webkit-box;
      padding-bottom: var(--fd-gap);
      line-clamp: 4;
      -webkit-line-clamp: 4;
      -webkit-box-orient: vertical;
      overflow: clip;
      max-width: 57ch;
      @include m.fdFontM;
      text-shadow: var(--fd-font-shadow);
    }
    &__col {
      display: flex;
      gap: var(--fd-gap);
      & ul:nth-of-type(1),
      & ul:nth-of-type(2) {
        padding-bottom: var(--fd-gap);
      }
      & li {
        display: flex;
        text-transform: capitalize;
      }
    }
  }
}

